# workflow-orchestration-queue-charlie80-b

./: .ai-repository-summary.md  .dockerignore  .env.example  .gitleaks.toml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
debrief-and-document/: debrief-report.md  trace.md
docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  README.md  implementation-plan.md
docs/validation/: VALIDATION_REPORT_create-app-plan_2026-03-21T184200.md  VALIDATION_REPORT_init-existing-repository_2026-03-21.md
plan_docs/: architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
scripts/: devcontainer-opencode.sh  run_opencode_prompt.sh  start-opencode-server.sh  verify-template-structure.sh
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py
src/queue/: __init__.py
src/workflow_orchestration_queue/: app.py  notifier_service.py  orchestrator_sentinel.py
src/workflow_orchestration_queue/config/: __init__.py  settings.py
src/workflow_orchestration_queue/models/: __init__.py  github_events.py  work_item.py
src/workflow_orchestration_queue/queue/: __init__.py  github_queue.py  http_client.py
test/: test-opencode-run.sh  test-shell-bridge.sh  test-template-verification.sh
tests/: __init__.py  conftest.py  test_github_queue.py  test_integration.py  test_polling_engine.py  test_work_item.py
tests/test_config/: test_settings.py
